[tool.poetry]
name = "md-redact"
version = "0.1.0"
description = "Redact portions of content if a condition is met"
readme = README.rst
authors = ["Will Mooney <will.mooney.3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
